--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ExpenseTracker",
   "version": "0.0.1",
-  "private": false,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -18,6 +17,7 @@
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
