--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
