--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
