--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
