--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "react-native": "0.75.4",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.20.0",
-    "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "uuid": "^10.0.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
