--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-date-picker": "^5.0.7",
@@ -28,7 +29,8 @@
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
