--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-config": "^1.5.3",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-paper": "^5.12.5",
