patch(package.json): add script to build apk using powershell

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "android": "react-native run-android",
+    "ps-build-android": "cd android && gradlew.bat assembleRelease && cd ..",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
