--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "react-native-config": "^1.5.3",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-gifted-charts": "^1.4.46",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.8.0",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.2.0",
